--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/dev-pizza?schema=public"
+
+JWT_SECRET=91d373946eb2ca29e4dacd37828add66
